# chess

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  main.cpp  sdlpp.cpp  sdlpp.h  sdlpp_image.cpp
source/: CMakeLists.txt  bit_board.cpp  bit_board.h  bit_board_formatter.h  board.cpp  board.h  button.cpp  button.h  chess.h  event.h  event_handlers.h  game.cpp  game.h  grid_view.cpp  grid_view.h  layout.h  main.cpp  piece_formatter.h  pieces.cpp  pieces.h  promotion_prompt.cpp  promotion_prompt.h  sample.cpp  sdl_fmt.h  sdl_point.h  sdl_rectangle.h  sprite_map_grid.h  timing.h  vec2.h  vec2_formatter.h  widget.h
source/SDLWrap/: CMakeLists.txt  sdlpp.cpp  sdlpp.h  sdlpp_image.cpp  sdlpp_image.h
tests/: CMakeLists.txt  bit_board_test.cpp  chess_test.cpp  event_test.cpp
